# codex-demo

./: README.md  mytest.txt
demos/go/two-sum/: README.md  go.mod  main.go  main_test.go
demos/java/two-sum/: README.md  TwoSumDemo.java
docs/: github-submit.md  offline-tool-demo.md
scripts/: demo-offline-tool.sh
tools/offline-checker/: README.md  pyproject.toml
tools/offline-checker/src/offline_checker/: __init__.py  cli.py
