[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-checker"
version = "0.1.0"
description = "Tiny offline-installable demo CLI for Codex workflow"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "codex-demo"}]

[project.scripts]
offline-check = "offline_checker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
